2008-05-28  Tambet Ingo  <tambet@gmail.com>

	Show all active connections in "Connection Information" dialog.

	* src/applet.glade: Remove the connection editor's content, it's
	built in C now, one page per active connection.

	* src/applet-dialogs.c: Add a tab per connection when showing the
	connection information.

	* src/applet.c (applet_connection_info_cb): Don't find the default
	connection, all active connections are shown.

2008-05-23  Tambet Ingo  <tambet@gmail.com>

	* src/connection-editor/page-ip4.c: Add a "DHCP with manual DNS settings"
	IP4 configuration method.

2008-05-21  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/wireless-security.c
		- (ws_802_1x_auth_combo_init): fix counting of active item in the
			auth popup menu (rh #447716)

2008-05-15  Tambet Ingo  <tambet@gmail.com>

	Update GConf connections after all the changes are done to avoid
	invalid connection states while in between changes.

	* src/gconf-helpers/nma-gconf-settings.c (connections_changed_cb):
	Collect all pending changes and handle them after all GConf changes
	are done. Also fixes a bunch of ugly warnings when connections get
	deleted.

	* src/gconf-helpers/nma-gconf-connection.c
	(nma_gconf_connection_changed): Remove the GConfEntry, we collect all
	changes before calling this, the connection is in invalid state while
	some setting values are update and others aren't.
	(delete): Suggest a sync after recursive unset.

2008-05-15  Tambet Ingo  <tambet@gmail.com>

	Move crypto functions from here to NetworkManager/libnm-util.

	* src/utils/crypto.[ch]
	* src/utils/crypto_gnutls.c
	* src/utils/crypto_nss.c
	* src/utils/test-crypto.c: Move to NetworkManager/libnm-util.

2008-05-12  Dan Williams  <dcbw@redhat.com>

	* configure.ac
		- Handle PolicyKit 0.6 and grab PK version for later use
		- Split out PK CFLAGS and LIBS from main NMA flags and libs

	* src/connection-editor/Makefile.am
		- Use split out PK CFLAGS and LIBS
		- Build in PK 0.6 helpers when needed
