@@ -1,3 +1,9 @@
+2008-05-28  Dan Williams  <dcbw@redhat.com>
+
+	* src/utils/utils.c
+		- (utils_get_device_description): ignore words in the product string
+			too; add more ignored words
+
 2008-05-28  Tambet Ingo  <tambet@gmail.com>
 
 	Show all active connections in "Connection Information" dialog.
